# my-cookiecutter-template

./: .gitignore  CONTRIBUTING.rst  Jenkinsfile  README.rst  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  features.rst  index.rst  make.bat  prompts.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Jenkinsfile  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
{{cookiecutter.project_slug}}/cicd/: develop.groovy  feature.groovy  master.groovy  staging.groovy
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  installation.rst
{{cookiecutter.project_slug}}/gcf/: requirements.txt.tmpl
{{cookiecutter.project_slug}}/git-hooks/: pre-commit  pre-push
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/tf/: main.tf  variables.tf
{{cookiecutter.project_slug}}/tf/env/: dev.tfvars  kns.tfvars
