[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[metadata]
name = aa-pypackage
description = Cookiecutter template for a standard Python package, with optional FrEEdAA enabled.
author = Federico D'Ambrosio
author-email = federico.dambrosio@generali.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://gitlab.advancedanalytics.generali.com/aa-generali-italia/aa-pypackage
project-urls = 
	Documentation = https://aa-generali-italia.atlassian.net/wiki/spaces/DE/pages/1478688958/AA+Software+Documentation
platforms = any
classifiers = 
	'Development Status :: 4 - Beta'
	'Environment :: Console'
	'Intended Audience :: Developers'
	'Natural Language :: English'
	'License :: OSI Approved :: BSD License'
	'Programming Language :: Python'
	'Programming Language :: Python :: 3'
	'Programming Language :: Python :: 3.5'
	'Programming Language :: Python :: 3.6'
	'Programming Language :: Python :: 3.7'
	'Programming Language :: Python :: 3.8'
	'Programming Language :: Python :: Implementation :: CPython'
	'Programming Language :: Python :: Implementation :: PyPy'
	'Topic :: Software Development'
description-file = README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = pyscaffold>=3.2a0,<3.3a0

[options.packages.find]
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[test]
extras = True

[tool:pytest]
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'
